# quantum-safe-py

./: .buildinfo  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RUNBOOK.md  SECURITY.md  changelog.html  docker-compose.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: changelog.doctree  environment.pickle  index.doctree
.doctrees/api/: audit.doctree  backends.doctree  exceptions.doctree  kem.doctree  migrate.doctree  protocols.doctree  signatures.doctree  types.doctree
.doctrees/guides/: audit.doctree  benchmarks.doctree  cli.doctree  concepts.doctree  installation.doctree  kem.doctree  migration.doctree  protocols.doctree  quickstart.doctree  signatures.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_modules/: index.html
_modules/quantum_safe/: backends.html  exceptions.html
_modules/quantum_safe/audit/: auditor.html  compliance.html  policy.html  sbom.html
_modules/quantum_safe/backends/: base.html  liboqs.html
_modules/quantum_safe/kem/: algorithms.html  core.html  hybrid.html
_modules/quantum_safe/migrate/: scanner.html  shims.html  state.html  upgrader.html
_modules/quantum_safe/protocols/: envelope.html  jwt.html  tls.html  x509.html
_modules/quantum_safe/signatures/: algorithms.html  core.html  hybrid.html
_modules/quantum_safe/types/: kem.html  keys.html  signatures.html
_sources/: changelog.rst.txt
_sources/api/: audit.rst.txt  backends.rst.txt  kem.rst.txt  protocols.rst.txt  signatures.rst.txt  types.rst.txt
_sources/guides/: benchmarks.rst.txt  installation.rst.txt  signatures.rst.txt
api/: audit.html  backends.html  exceptions.html  kem.html  migrate.html  protocols.html  signatures.html  types.html
docs/: Makefile  changelog.rst  conf.py  index.rst  make.bat
docs/api/: exceptions.rst  migrate.rst  types.rst
docs/guides/: audit.rst  benchmarks.rst  cli.rst  concepts.rst  installation.rst  kem.rst  migration.rst  protocols.rst  quickstart.rst  signatures.rst
guides/: audit.html  benchmarks.html  cli.html  concepts.html  installation.html  kem.html  migration.html  protocols.html  quickstart.html  signatures.html
results/: BENCHMARKS.md
src/quantum_safe/: __init__.py  _version.py  exceptions.py
src/quantum_safe/_internal/: __init__.py  serialization.py
src/quantum_safe/audit/: __init__.py  auditor.py  cli.py  compliance.py  policy.py  sbom.py
src/quantum_safe/backends/: __init__.py  base.py  liboqs.py  rustcrypto.py
src/quantum_safe/kem/: __init__.py  algorithms.py  core.py  hybrid.py
src/quantum_safe/migrate/: __init__.py  cli.py  scanner.py  shims.py  state.py  upgrader.py
src/quantum_safe/protocols/: __init__.py  envelope.py  jwt.py  tls.py  x509.py
src/quantum_safe/signatures/: __init__.py  algorithms.py  core.py  hybrid.py
src/quantum_safe/types/: __init__.py  kem.py  keys.py  signatures.py
tests/: conftest.py
tests/bench/: _oqs_path.py  bench_kem.py  bench_signatures.py  bench_stats.py  run_stats_demo.py
tests/integration/: test_end_to_end.py
tests/unit/: test_audit.py  test_bench_stats.py  test_cli.py  test_exceptions.py  test_kem.py  test_migrate.py  test_protocols.py  test_signatures.py  test_types.py
